resources/scss/style.scss
@import "~bootstrap/scss/bootstrap";

.cst-map-container {
  padding: 0 !important;
}
.cst-trends {
  font-size: 1.5em;
  font-weight: bold;
}
.full-box-shadow-p-0 {
  box-shadow: 0px 0px 30px -10px #b9b7b5;
  /*height: 100%;*/
}

.cst-btn-div {
  border-radius: 5px;
}

.map-div .full-box-shadow-p-0 button {
  padding: 12px;
  color: #38393C;
}

.map-div .cst-btn-div:hover {
  background-color: #eee;
}
.map-div .active {
  border: 1px solid black;
}
@media (min-width:1380px) {
  .map-div .full-box-shadow-p-0 button i {
      margin-right: 3rem !important;
      margin-left: 3rem !important;
  }
}
.map-div .map-search-fixed {
  position: absolute;
  top: 10px;
  border: 0;
}
@media (min-width:576px) {
  .map-div .map-search-fixed {
      top: 4vh;
  }
}
.map-div .form-control {
  z-index: 1000;
  border: 0;
}
.map-div .form-control i {
  color: #B9B7B5;
}

.form-control input::placeholder {
  color: #b9b7b5;
}

.filter-title {
  text-transform: uppercase;
  font-weight: bold;
}

.filter-details {
  display: none;
  margin-top: 15px;

  .filter-details-description {
    width: 75%;
    white-space: normal;
    margin: 0 auto;
    font-size: 14px;
    color: #666;
  }
}

.breakable {
  word-break: break-word;
  text-align: justify;
  white-space: normal;
}

a:hover,
button:hover,
button:focus {
  text-decoration: none !important;
}
input:focus,
button:focus {
  box-shadow: none !important;
}

.cst-btn-filter-active {
  background-color: #f8fca4;

  .filter-details {
    display: block;
  }
}

.map-popup-location {
  .map-popup-location-image {
    max-width: 100%;
  }

  .leaflet-popup-content-wrapper {
    .leaflet-popup-content {
      margin: 0;
    }
  }

  .map-popup-location-wrapper {
    padding: 10px;
  }

  .map-popup-location-type {
    text-transform: uppercase;
    font-weight: bold;
    margin-bottom: 7px;
  }

  .map-popup-location-address {
    margin-bottom: 7px;

    .map-popup-location-address-street {
      font-weight: bold;
    }

    .map-popup-location-address-city {
      color: #b9b7b5;
    }
  }

  .map-popup-location-label {
    text-transform: uppercase;
    color: #b9b7b5;
    font-weight: bold;
    padding-right: 5px;
  }
}

